# polymercado

./: .env.example  .gitignore  AGENTS.md  README.md  polymercado.db  pyproject.toml  requirements.txt
api_docs/: manifest.json
api_docs/quickstart/: fetching-data.md  first-order.md  overview.md
checkpoints/: checkpoint_04012026_1923.md  checkpoint_04012026_1929.md  checkpoint_04012026_1937.md  checkpoint_04012026_1941.md  checkpoint_04012026_1949.md  checkpoint_04012026_1956.md  checkpoint_04012026_1958.md  checkpoint_04012026_2020.md  checkpoint_04012026_2026.md  checkpoint_04012026_2049.md  checkpoint_04012026_2052.md  checkpoint_04012026_2135.md  checkpoint_04012026_2143.md  checkpoint_04012026_2145.md  checkpoint_04012026_2152.md  checkpoint_04012026_2209.md  checkpoint_04012026_2213.md  checkpoint_04012026_2218.md  checkpoint_04012026_2224.md  checkpoint_04012026_2252.md  checkpoint_04012026_2311.md  checkpoint_04012026_2319.md  checkpoint_04012026_2325.md  checkpoint_04012026_2330.md  checkpoint_04012026_2343.md  checkpoint_04012026_2356.md  checkpoint_05012026_0015.md  checkpoint_05012026_0032.md  checkpoint_05012026_2055.md  checkpoint_05012026_2337.md
scripts/: fetch_fixtures.py
specs/: README.md  alerts.md  architecture.md  config.md  data_sources.md  ingestion.md  markets_explorer.md  ops_testing.md  overview.md  signals_arbitrage.md  signals_wallets.md  storage.md  ui.md
src/polymercado/: __init__.py  __main__.py  config.py  db.py  jobs.py  logging.py  markets.py  models.py  quality.py  scheduler.py  trades.py  utils.py
tests/: conftest.py
(+93 files in other folders)
